removed drop shadows because they were overlapping the fixed navbar

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ input {
   padding: 0 20px;
   margin: 20px auto;
   border-radius: 25px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
   font-size: 1.1em;
   color: white;
 }
@@ -150,7 +150,7 @@ form#to-do-form {
   background-color: orange;
   cursor: pointer;
   color: white;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
   font-size: 1.1em;
   margin-left: 25px;
 }
@@ -166,7 +166,7 @@ form#to-do-form {
   margin: 20px auto;
   background-color: #fef68a;
   border-radius: 25px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
 }
 @media screen and (min-width: 768px) {
   .list {
